<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Delivery">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_totally_blurred_">


        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/search_view_bg"
            android:queryHint="@string/searchHint"
            android:iconifiedByDefault="false"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:id="@+id/scrollViewDelivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/welcomeUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:text="@string/welcomeUser"
                    />
                <!-- todo extra feature: add category filtering -->
                <!--
                                <TextView
                                    android:id="@+id/textView2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="20dp"
                                    android:layout_marginEnd="20dp"
                                    android:text="@string/foodCategories"
                                    android:textColor="#000000"
                                    android:textSize="16sp"/>

                                <androidx.recyclerview.widget.RecyclerView
                                    android:id="@+id/foodRecyclerView"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginStart="20dp"
                                    android:layout_marginEnd="20dp"
                                    android:alwaysDrawnWithCache="false"
                                    android:scrollbars="horizontal" >

                                </androidx.recyclerview.widget.RecyclerView>
                -->
                <LinearLayout
                    android:id="@+id/linearlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/linearlayoutcorneredbg"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/featured"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:ignore="TextContrastCheck" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/featuredRestaurantRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:alwaysDrawnWithCache="false"
                        android:scrollbars="horizontal" />

                </LinearLayout>
                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/restaurantsTxt"
                    android:textColor="#000000"
                    android:textSize="16sp"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/restaurantRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:alwaysDrawnWithCache="false" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="80dp">

                </View>
            </LinearLayout>

        </ScrollView>



    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>